# aicode

./: .gitignore  Makefile  README.md  playgroud.ipynb  pyproject.toml
aicode/: core.py  metric.py  other.py  utils.py
aicode/pretrain/: component.py  data.py  model.py
aicode/reg_with_code/: __init__.py  component.py  data.py  model.py
scripts/: create_dataset.py  pretrain_model.py  train_reg_model.py
